--- a/TimeOnTheTop/TimeOnTheTop.csproj
+++ b/TimeOnTheTop/TimeOnTheTop.csproj
@@ -22,18 +22,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="assets\appicon.ico">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="assets\appicon.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="assets\appicon_dark.ico">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="assets\appicon_dark.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
+    <Resource Include="assets\appicon.ico"/>
+    <Resource Include="assets\appicon_light.ico"/>
+    <Resource Include="assets\appicon_light.png"/>
+    <Resource Include="assets\appicon_dark.ico"/>
+    <Resource Include="assets\appicon_dark.png"/>
   </ItemGroup>
 
 </Project>
