--- a/TimeOnTheTop/TimeOnTheTop.csproj
+++ b/TimeOnTheTop/TimeOnTheTop.csproj
@@ -7,11 +7,16 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-	<UseWindowsForms>False</UseWindowsForms>
+	<UseWindowsForms>true</UseWindowsForms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <ApplicationIcon>assets\appicon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+	<Using Remove="System.Windows.Forms" />
+	<Using Remove="System.Drawing" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AdonisUI" Version="1.17.1" />
